--- a/src/components/auction/Auction.module.css
+++ b/src/components/auction/Auction.module.css
@@ -1,6 +1,8 @@
 .auction_container {
     margin: auto;
-    background-color: aqua;
+    background-color: rgba(0, 0, 0, 0.700);
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: 100%;
 }
