--- a/src/components/auction/result/Result.module.css
+++ b/src/components/auction/result/Result.module.css
@@ -22,7 +22,7 @@
     height: 12%;
     display: flex;
     flex-direction: row;
-    border: 3px inset white;
+    border: 4px inset white;
     margin-bottom: 1px;
     cursor: pointer;
 }
@@ -39,9 +39,38 @@
 
 .info {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 300px;
     display: none;
     transform: translateX(-50%);
     z-index: 999;
+    border: 2px inset white;
+    background-color: #292726;
+}
+
+.info_name {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    background-color: bisque;
+}
+
+.info_option {
+    font-size: 16px;
+    color: #1590C7;
+    padding: 10px 50px 0px 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.option_value {
+    padding-right: 10px;
 }
 
 .item {
