--- a/src/components/auction/result/Result.module.css
+++ b/src/components/auction/result/Result.module.css
@@ -14,12 +14,12 @@
 
 .result_list_container {
     width: 90%;
-    height: 100%;
+    height: 82%;
 }
 
 .result_item {
     width: 100%;
-    height: 12%;
+    height: 70px;
     display: flex;
     flex-direction: row;
     border: 4px inset white;
@@ -30,10 +30,8 @@
 .remain_time {
     display: flex;
     align-items: center;
-    justify-content: center;
     width: 15%;
     height: 100%;
-    background-color: bisque;
     position: relative;
 }
 
@@ -58,7 +56,6 @@
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    background-color: bisque;
 }
 
 .info_option {
@@ -103,7 +100,6 @@
     justify-content: center;
     width: 20%;
     height: 100%;
-    background-color: blueviolet;
 }
 
 .remain_time {
@@ -112,7 +108,6 @@
     justify-content: center;
     width: 15%;
     height: 100%;
-    background-color: bisque;
     position: relative;
 }
 
@@ -130,7 +125,6 @@
     width: 35%;
     height: 100%;
 }
-
 
 .price {
     width: 30%;
@@ -153,4 +147,21 @@
     justify-content: center;
     width: 20%;
     height: 100%;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 20px;
+    width: 100%;
+    height: 30px;
+}
+
+.pagination_next {
+    cursor: pointer;
+}
+
+.pagination_prev {
+    cursor: pointer;
 }
