--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,4 @@
-@font-face {
-    font-family: 'Cormorant Garamond', serif;
-    src: url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
-}
-
-.background-wrapper {
-    font-family: 'Cormorant Garamond', serif;
-    background: url(https://oyster.ignimgs.com/mediawiki/apis.ign.com/dark-and-darker/8/8a/Dark-darker-beginners.jpg?width=1920);
-    background-size: 100% 100%;
-    background-repeat: repeat-y;
-    height: 100vh;
-    padding-top: 60px;
+:root {
+    --primary-color: #f05014;
+    --background-color: #000;
 }
