--- a/src/components/auction/detail/Detail.module.css
+++ b/src/components/auction/detail/Detail.module.css
@@ -114,6 +114,7 @@
     margin-top: 40px;
     padding: 40px 50px 40px 20px;
     width: 90%;
+    min-height: 350px;
     display: flex;
     flex-direction: row;
     background-color: #1C1E25;
@@ -134,6 +135,11 @@
     justify-content: center;
     height: 100%;
     width: 25%;
+}
+
+.image_box>img {
+    max-width: 80%;
+    max-height: 90%;
 }
 
 .item_info {
@@ -362,4 +368,29 @@
 
 .offer_btn:hover {
     filter: brightness(0.7);
+}
+
+.chat_btn {
+    height: 40px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #353946;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.chat_btn:hover {
+    filter: brightness(0.7);
+}
+
+.completed {
+    height: 40px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #353946;
+    margin-bottom: 15px;
 }
