--- a/src/components/chat/AuctionChat.module.css
+++ b/src/components/chat/AuctionChat.module.css
@@ -24,17 +24,33 @@
 
 .chat_room_list {
     width: 100%;
+    height: 80%;
     overflow-y: scroll;
-    min-height: 80%;
 }
 
 .chat_room_wrapper {
-    height: 90px;
+    height: 120px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: antiquewhite;
+    justify-content: space-between;
     padding: 0 10px 0 30px;
+    cursor: pointer;
+    position: relative;
+}
+
+.chat_room_wrapper:hover {
+    background-color: #F6F6F6;
+}
+
+.chat_room_wrapper:hover .chat_room__arrow_icon {
+    display: inline-block;
+}
+
+.chat_room__arrow_icon {
+    position: absolute;
+    right: 10px;
 }
 
 .chat_room_info {
@@ -42,19 +58,57 @@
     flex-direction: column;
 }
 
-.nickname {
-    font-size: 18px;
+.item {
+    font-size: 20px;
     font-weight: bold;
 }
 
-.breif_content {
+.trade_type {
+    padding: 3px 5px 1px 5px;
+    margin-left: 15px;
+    border: 1px solid #B89971;
+    font-size: 16px;
+}
+
+.nickname {
     font-size: 14px;
 }
 
-.breif_content>span {
+.brief_content {
+    width: 100%;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+}
+
+.brief_content>span {
     font-size: 12px;
+}
+
+.brief_content__message {
+    max-width: 80%;
+    display: block;
+    height: 1rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.chat_room_completed {
+    margin-right: 40px;
 }
 
 .auction_chat__chat {
     width: 100%;
+}
+
+.no_selected_chat_room {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
 }
