--- a/src/components/chat/Chat.module.css
+++ b/src/components/chat/Chat.module.css
@@ -7,13 +7,197 @@
 
 .chat__header {
     height: 20%;
+    padding: 20px 30px 20px 0;
     background-color: #1B1D22;
     border-bottom: 1px solid #F6F6F6;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.chat__header__item_info {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.item_info__image {
+    height: 100%;
+    aspect-ratio: 1/1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item_info__image>img {
+    height: 100%;
+}
+
+.item_info_wrapper {
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.item_price>div {
+    height: 20px;
+    width: 130px;
+    margin-bottom: 10px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.item_price>div>div {
+    text-align: end;
+    display: flex;
+    align-items: center;
+}
+
+.item_price_wrapper>span {
+    color: #DD9A14;
+    padding-right: 5px;
+}
+
+.price_image_box {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.price_image_box>img {
+    height: 30px;
+}
+
+.item_info__item_name {
+    font-size: 20px;
+}
+
+.chat__header__trade_completed {
+    padding: 5px 10px 5px 10px;
+    background-color: #353946;
+    height: fit-content;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.chat__header__btn_wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.btn {
+    padding: 5px 10px 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: fit-content;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.complete_trade_btn {
+    background-color: #353946;
+}
+
+.cancel_trade_btn {
+    background-color: red;
+}
+
+.item_details {
+    min-width: 270px;
+    position: absolute;
+    background: linear-gradient(to bottom, #050708, #353946);
+    z-index: 999;
+}
+
+.item_details__name {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.item_details__option_wrapper {
+    padding: 20px 20px 20px 20px;
+}
+
+.info_option {
+    width: 100%;
+    font-size: 16px;
+    color: #1590C7;
+    padding-top: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.info_option>div {
+    display: flex;
+    flex-direction: row;
 }
 
 .chat__contents {
     flex: 1;
     border-bottom: 1px solid #F6F6F6;
+    overflow-y: scroll;
+}
+
+.chat_message_wrapper {
+    margin: 0 10px 0 10px;
+}
+
+.right {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.left {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.date_divider {
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 2px 20px 2px 20px;
+    background-color: #353946;
+    border-radius: 10px;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+
+.message {
+    margin: 5px 0 5px 5px;
+    border-radius: 10px;
+    background-color: #353946;
+    width: fit-content;
+    max-width: 60%;
+    height: fit-content;
+    padding: 5px 10px 5px 10px;
+}
+
+.time {
+    margin: 0 5px 0 5px;
+    display: flex;
+    align-items: end;
+    font-size: 10px;
+    opacity: 0.5;
 }
 
 .chat__input {
@@ -48,4 +232,15 @@
     resize: none;
     overflow: hidden;
     font-size: 18px;
+}
+
+.no_chat {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #353946;
 }
