--- a/src/components/signup/Signup.module.css
+++ b/src/components/signup/Signup.module.css
@@ -1,3 +1,16 @@
+.signup_background_wrapper {
+    width: 99vi;
+    height: 93vh;
+    background-image: url("https://i.blogs.es/e1af2c/dark-and-darker-bitorrent/1366_2000.webp");
+    background-size: cover;
+    position: absolute;
+    top: -100px;
+    left: 0px;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+}
+
 .signup_container {
     display: flex;
     flex-direction: column;
